[gd_scene load_steps=2 format=3 uid="uid://bdoor001"]

[ext_resource type="Script" path="res://interactables/ExitDoor.gd" id="1_door"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door"]
size = Vector2(60, 80)

[node name="ExitDoor" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitoring = true
monitorable = false
script = ExtResource("1_door")

[node name="Visual" type="Node2D" parent="."]

[node name="DoorFrame" type="ColorRect" parent="Visual"]
offset_left = -24.0
offset_top = -32.0
offset_right = 24.0
offset_bottom = 32.0
color = Color(0.15, 0.4, 0.15, 1)

[node name="DoorInner" type="ColorRect" parent="Visual"]
offset_left = -18.0
offset_top = -26.0
offset_right = 18.0
offset_bottom = 32.0
color = Color(0.3, 0.8, 0.3, 1)

[node name="Handle" type="ColorRect" parent="Visual"]
offset_left = 8.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 4.0
color = Color(0.7, 0.6, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_door")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
